--- a/src/app/components/basicelements/basicelements.component.html
+++ b/src/app/components/basicelements/basicelements.component.html
@@ -1,7 +1,7 @@
 <div class="section section-buttons">
     <div class="container">
         <div class="tim-title">
-            <h2>claudia</h2>
+            <h2>gato</h2>
         </div>
         <div id="buttons">
             <div class="tim-title">
