--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -7,7 +7,7 @@
                     <div class="angular-logo">
                         <img src="assets/img/angular2-logo.png" alt="">
                     </div>
-                    <h1 class="presentation-title">Paper Kit 2 Angular</h1>
+                    <h1 class="presentation-title">Creamos espacios para experiencias únicas</h1>
                     <div class="fog-low">
                         <img src="assets/img/fog-low.png" alt="">
                     </div>
@@ -16,13 +16,15 @@
                     </div>
                 </div>
 
-                <h2 class="presentation-subtitle text-center">Free Bootstrap 4 UI Kit for Angular 7</h2>
+                <h2 class="presentation-subtitle text-center"></h2>
             </div>
         </div>
         <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
-        <h6 class=" category-absolute ml-auto mr-auto">Designed and coded by
+        <h6 class=" category-absolute ml-auto mr-auto">
         <!-- <h6 class="category category-absolute">Designed and coded by -->
 
+            
+            <!-- 
             <a href="https://www.creative-tim.com" target="_blank">
                 <img src="assets/img/creative-tim-white-slim2.png" class="creative-tim-logo">
             </a>
@@ -375,3 +377,4 @@
         </div>
     </div>
 </div>
+-->
