--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -7,19 +7,26 @@
                     <div class="angular-logo">
                         <img src="assets/img/angular2-logo.png" alt="">
                     </div>
-                    <h1 class="presentation-title">Creamos espacios para experiencias únicas</h1>
+                    <h1 class="presentation-title">CREAMOS ESPACIOS PARA EXPERIENCIAS ÚNICAS</h1>
+                   
+                   <!--
                     <div class="fog-low">
                         <img src="assets/img/fog-low.png" alt="">
                     </div>
                     <div class="fog-low right">
                         <img src="assets/img/fog-low.png" alt="">
                     </div>
+
+                -->
                 </div>
 
                 <h2 class="presentation-subtitle text-center"></h2>
             </div>
         </div>
+
+        <!--
         <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
+        -->
         <h6 class=" category-absolute ml-auto mr-auto">
         <!-- <h6 class="category category-absolute">Designed and coded by -->
 
