--- a/src/assets/sass/paper-kit/_examples.scss
+++ b/src/assets/sass/paper-kit/_examples.scss
@@ -163,7 +163,7 @@
     max-width: 730px;
     margin: 0 auto;
     position: relative;
-    text-align: center;
+    text-align: left;
     color: #FFFFFF;
     display: block;
 
@@ -181,7 +181,7 @@
 }
 
 .presentation-title{
-    font-size: 8em;
+    font-size: 3em;
     font-weight: 700;
     margin: 0;
     color: #FFFFFF;
@@ -287,6 +287,6 @@
 
 @media (max-width: 500px){
     .presentation-title{
-        font-size: 5em;
+        font-size: 3em;
     }
 }
