--- a/documentation/css/demo.css
+++ b/documentation/css/demo.css
@@ -972,7 +972,7 @@
     text-decoration: none;
 }
 .demo-icons header {
-    text-align: center;
+    text-align: justify;
     padding: 100px 0 0;
 }
 .demo-icons header h1 {
