--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <div class="page-header section-dark" style="background-image: url('assets/img/antoine-barres.jpg')">
+    <div class="page-header section-dark" style="background-image: url('assets/img/home/homebanner.png')">
         <div class="filter"></div>
         <div class="content-center">
             <div class="container">
@@ -31,15 +31,18 @@
         <!-- <h6 class="category category-absolute">Designed and coded by -->
 
             
-            <!-- 
-            <a href="https://www.creative-tim.com" target="_blank">
-                <img src="assets/img/creative-tim-white-slim2.png" class="creative-tim-logo">
-            </a>
+            
+            
         </h6>
     </div>
+
     <div class="main">
       <app-basicelements></app-basicelements>
       <app-navigation></app-navigation>
+
+
+
+<!--
       <div class="section">
           <div class="container">
               <div class="row">
@@ -109,6 +112,10 @@
               </div>
           </div>
       </div>
+    -->
+
+
+<!--
       <div class="section section-notifications" id="notifications">
           <div class="container">
               <div class="tim-title">
@@ -117,7 +124,13 @@
           </div>
           <app-notification></app-notification>
       </div>
+-->
+
+<!--
       <app-typography></app-typography>
+-->
+
+<!--
       <div class="section javascript-components">
           <div class="container">
               <div class="tim-title">
@@ -200,6 +213,9 @@
               </div>
           </div>
       </div>
+
+-->
+<!--
       <div class="section" id="carousel">
           <div class="container">
               <div class="tim-title">
@@ -233,40 +249,12 @@
               </div>
           </div>
       </div>
-        <div class="section section-dark section-nucleo-icons">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-md-12">
-                        <h2 class="title">Nucleo Icons</h2><br/>
-                        <p class="description">
-                            Now UI Kit comes with 100 custom icons made by our friends from NucleoApp. The official package contains over 2.100 thin icons which are looking great in combination with Now UI Kit Make sure you check all of them and use those that you like the most.
-                        </p><br/>
-                        <a [routerLink]="['/nucleoicons']" class="btn btn-danger btn-round">View Demo Icons</a>
-                        <a href="https://nucleoapp.com/?ref=1712" class="btn btn-outline-danger btn-round" target="_blank">View All Icons</a>
-                    </div>
 
-                    <div class="col-lg-6 col-md-12">
-                        <div class="icons-container">
-                            <i class="nc-icon nc-time-alarm"></i>
-                            <i class="nc-icon nc-atom"></i>
-                            <i class="nc-icon nc-camera-compact"></i>
-                            <i class="nc-icon nc-watch-time"></i>
-                            <i class="nc-icon nc-key-25"></i>
-                            <i class="nc-icon nc-diamond"></i>
-                            <i class="nc-icon nc-user-run"></i>
-                            <i class="nc-icon nc-layout-11"></i>
-                            <i class="nc-icon nc-badge"></i>
-                            <i class="nc-icon nc-bulb-63"></i>
-                            <i class="nc-icon nc-favourite-28"></i>
-                            <i class="nc-icon nc-planet"></i>
-                            <i class="nc-icon nc-tie-bow"></i>
-                            <i class="nc-icon nc-zoom-split"></i>
-                            <i class="nc-icon nc-cloud-download-93"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+-->
+
+   
+
+<!--
         <div class="section section-dark">
             <div class="container">
                 <div class="row">
@@ -277,6 +265,9 @@
                 </div>
             </div>
         </div>
+
+-->
+<!--
         <div class="section section-image section-login" style="background-image: url('assets/img/login-image.jpg');">
             <div class="container">
                 <div class="row">
@@ -328,6 +319,8 @@
                 </div>
             </div>
         </div>
+-->
+<!--
         <div class="section section-dark">
             <div class="container">
                 <div class="row example-page">
@@ -347,14 +340,18 @@
                 </div>
             </div>
         </div>
+
+-->
+ <!--      
         <div class="section">
             <div class="container text-center">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto text-center">
-                        <h2 class="title">Do you like what you see?</h2>
-                        <p class="description">Cause if you do, it can be yours for Free. Hit the button below and download it. Start a new project or give an old Bootstrap 4 project a new look.</p>
+                        <h2 class="title"> SOMOS UN EQUIPO EXPERTO EN NUESTRO RUBRO</h2>
+                        <p class="description">Somos una empresa constructora y nuestra actividad gira en torno a construcciones de edificios completos y otras actividades empresariales que se ha consolidado en los rubros de construcción civil y edificación formado por socios netamente familiares, nace con el objeto de cumplir estos retos, basados en la amplia experiencia de sus profesionales en la construcción de sus proyectos a desarrollar.</p>
                     </div>
                 </div>
+                
                 <div class="row">
                     <div class="col-md-6 download-area ml-auto mr-auto">
                         <a href="https://www.creative-tim.com/product/paper-kit-2" class="btn btn-warning btn-round">Download free HTML</a>
