--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,10 +15,139 @@
         </div>
         <h6 class=" category-absolute ml-auto mr-auto">    
         </h6>
+
+        
     </div>
 
+    <div class="section">
+        <div class="container">
+            <div class="row" id="modals">
+                <div class="col-md-6">
+                    <div class="tim-title">
+                        <h3>NUESTROS SERVICIOS</h3>
+                    </div>
+                    <app-modal-component></app-modal-component>
+                    <p>RTZ CONTRATISTAS  GENERALES  SAC es una empresa constructora que a lo largo de los 5 años de experiencia ha sido capaz de reunir los requisitos indispensables para desempeñar correctamente proyectos y ejecución de obras. 
+                        garantizando la mejor calidad del servicio, ética, responsabilidad y confianza a nuestros clientes.
+                        
+                        <button class="btn btn-outline-danger btn-round">VER MÁS SERVICIOS</button>
+                </div>
+                <div class="col-md-6">
+                    
+                    <button type="button" class="btn btn-outline-danger btn-round" placement="right"
+                        ngbPopover="Here will be some very useful information about this popover." popoverTitle="Popover on right">
+                        on right
+                    </button>
+        
+                    <button type="button" class="btn btn-outline-danger btn-round" placement="top"
+                        ngbPopover="Here will be some very useful information about this popover." popoverTitle="Popover on top">
+                        on top
+                    </button>
+        
+                    <button type="button" class="btn btn-outline-danger btn-round" placement="left"
+                        ngbPopover="Here will be some very useful information about this popover." popoverTitle="Popover on left">
+                        on left
+                    </button>
+        
+                    <button type="button" class="btn btn-outline-danger btn-round" placement="bottom"
+                        ngbPopover="Here will be some very useful information about this popover." popoverTitle="Popover on bottom">
+                        on bottom
+                    </button>
+
+
+
+
+
+
+
+
+
+
+
+                    <div class="slick-list draggable"><div class="slick-track" style="opacity: 1; width: 820px; transform: translate3d(0px, 0px, 0px);"><a href="https://www.g2studio.com.pe/servicio/ingenieria-implementacion-de-oficinas/" class="b2-item slick-slide slick-current slick-active" style="background-image: url(&quot;https://www.g2studio.com.pe/wp-content/uploads/2018/08/nn.png&quot;); width: 205px;" data-slick-index="0" aria-hidden="false" tabindex="0">
+						<!-- <div class="b2-item-img" style="background-image:url(https://www.g2studio.com.pe/wp-content/uploads/2018/08/nn.png); "></div>		 -->						
+						<h4 class="b2-item-info">DISEÑO E IMPLEMENTACIÓN DE OFICINAS</h4>
+						<span class="g0-link">Ver Servicios</span>	
+					</a><a href="https://www.g2studio.com.pe/servicio/diseno-y-construccion-de-edificios-multifamiliares/" class="b2-item slick-slide slick-active" style="background-image: url(&quot;https://www.g2studio.com.pe/wp-content/uploads/2018/08/e.png&quot;); width: 205px;" data-slick-index="1" aria-hidden="false" tabindex="0">
+						<!-- <div class="b2-item-img" style="background-image:url(https://www.g2studio.com.pe/wp-content/uploads/2018/08/e.png); "></div>		 -->						
+						<h4 class="b2-item-info">DISEÑO Y CONSTRUCCIÓN DE EDIFICIOS MULTIFAMILIARES</h4>
+						<span class="g0-link">Ver Servicios</span>	
+					</a><a href="https://www.g2studio.com.pe/servicio/diseno-e-implementacion-de-tiendas-retail-y-espacios-comerciales/" class="b2-item slick-slide slick-active" style="background-image: url(&quot;https://www.g2studio.com.pe/wp-content/uploads/2018/08/oo.png&quot;); width: 205px;" data-slick-index="2" aria-hidden="false" tabindex="0">
+						<!-- <div class="b2-item-img" style="background-image:url(https://www.g2studio.com.pe/wp-content/uploads/2018/08/oo.png); "></div>		 -->						
+						<h4 class="b2-item-info">DISEÑO E IMPLEMENTACIÓN DE TIENDAS RETAIL Y ESPACIOS COMERCIALES</h4>
+						<span class="g0-link">Ver Servicios</span>	
+					</a><a href="https://www.g2studio.com.pe/servicio/diseno-y-construccion-de-plantas-industriales-y-almacenes/" class="b2-item slick-slide slick-active" style="background-image: url(&quot;https://www.g2studio.com.pe/wp-content/uploads/2018/08/mm.png&quot;); width: 205px;" data-slick-index="3" aria-hidden="false" tabindex="0">
+						<!-- <div class="b2-item-img" style="background-image:url(https://www.g2studio.com.pe/wp-content/uploads/2018/08/mm.png); "></div>		 -->						
+						<h4 class="b2-item-info">DISEÑO Y CONSTRUCCIÓN DE PLANTAS INDUSTRIALES Y ALMACENES</h4>
+						<span class="g0-link">Ver Servicios</span>	
+					</a></div></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                </div>
+            </div> 
+        </div>
+
+    </div>
+        
     <div class="main">
-      <app-basicelements></app-basicelements>
-      <app-navigation></app-navigation>  
+        <app-basicelements></app-basicelements>
+        <app-navigation></app-navigation>  
+    </div>
+
+
+    <div class="section">
+        <div class="container tim-container">
+            <div id="images">
+                <div class="container">
+                    <div class="tim-title">
+                        <h3>NUESTROS CLIENTES POTENCIALES</h3>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6  col-sm-3 col-md-2 offset-md-1">
+                 
+                            <img src="assets/img/uriel-soberanes.png" class="img-thumbnail img-responsive" alt="Rounded Image">
+
+                        </div>
+                        <div class="col-xs-6  col-sm-3 col-md-2 offset-md-1">
+                           
+                            <img src="assets/img/faces/joe-gardner-2.png" class="img-thumbnail img-responsive" alt="Rounded Image">
+                           
+                        </div>
+                        <div class="col-xs-6  col-sm-3 col-md-2 offset-md-1">
+                           
+                            <img src="assets/img/faces/clem-onojeghuo-3.png" class="img-thumbnail img-responsive" alt="Rounded Image">
+                           
+                        </div>
+                        <div class="col-xs-6  col-sm-3 col-md-2 offset-md-1">
+                          
+                            <img src="assets/img/faces/ESTREMADOYRO.png" class="img-thumbnail img-responsive" alt="Rounded Image">
+                          
+                            
+                        </div>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 </div>
