--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -23,7 +23,7 @@
         </ng-template>
         <ng-template ngbSlide>
             <div class="wrapper">
-                <div class="page-header section-dark" style="background-image: url('assets/img/home/homebanner.png')" alt="First slide">
+                <div class="page-header section-dark" style="background-image: url('assets/img/home/img3.png')" alt="First slide">
                     <div class="filter"></div>
                     <div class="content-center">
                         <div class="container">
@@ -43,7 +43,7 @@
         </ng-template>
         <ng-template ngbSlide>
             <div class="wrapper">
-                <div class="page-header section-dark" style="background-image: url('assets/img/home/homebanner.png')" alt="First slide">
+                <div class="page-header section-dark" style="background-image: url('assets/img/home/img2.png')" alt="First slide">
                     <div class="filter"></div>
                     <div class="content-center">
                         <div class="container">
