--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,7 +16,7 @@
                     </h6>
                 </div>
             </div>
-            <div class="carousel-caption">
+            <div class="carousel-caption" style="display:none;">
                 <h3>First Slide</h3>
                 <p> Angular 10 Carousel Example </p>
             </div>
@@ -36,7 +36,7 @@
                     </h6>
                 </div>
             </div>
-            <div class="carousel-caption">
+            <div class="carousel-caption" style="display:none;">
                 <h3>Second Slide</h3>
                 <p> Check out Techiediaries</p>
             </div>
@@ -56,7 +56,7 @@
                     </h6>
                 </div>
             </div>
-            <div class="carousel-caption">
+            <div class="carousel-caption" style="display:none;">
                 <h3>Third Slide</h3>
                 <p>for full tutorial...</p>
             </div>
@@ -79,50 +79,15 @@
                 <div class="col-md-6">
 
 
-                    <div class="slick-list draggable">
-                        <div class="slick-track" style="opacity: 1; width: 820px; transform: translate3d(0px, 0px, 0px);">
-                            <a href="https://www.g2studio.com.pe/servicio/ingenieria-implementacion-de-oficinas/" class="b2-item slick-slide slick-current slick-active" style="background-image: url(&quot;https://www.g2studio.com.pe/wp-content/uploads/2018/08/nn.png&quot;); width: 205px;"
-                                data-slick-index="0" aria-hidden="false" tabindex="0">
-                                <!-- <div class="b2-item-img" style="background-image:url(https://www.g2studio.com.pe/wp-content/uploads/2018/08/nn.png); "></div>		 -->
-                                <h4 class="b2-item-info">DISEÑO E IMPLEMENTACIÓN DE OFICINAS</h4>
-                                <span class="g0-link">Ver Servicios</span>
-                            </a>
-                            <a href="https://www.g2studio.com.pe/servicio/diseno-y-construccion-de-edificios-multifamiliares/" class="b2-item slick-slide slick-active" style="background-image: url(&quot;https://www.g2studio.com.pe/wp-content/uploads/2018/08/e.png&quot;); width: 205px;"
-                                data-slick-index="1" aria-hidden="false" tabindex="0">
-                                <!-- <div class="b2-item-img" style="background-image:url(https://www.g2studio.com.pe/wp-content/uploads/2018/08/e.png); "></div>		 -->
-                                <h4 class="b2-item-info">DISEÑO Y CONSTRUCCIÓN DE EDIFICIOS MULTIFAMILIARES</h4>
-                                <span class="g0-link">Ver Servicios</span>
-                            </a>
-                            <a href="https://www.g2studio.com.pe/servicio/diseno-e-implementacion-de-tiendas-retail-y-espacios-comerciales/" class="b2-item slick-slide slick-active" style="background-image: url(&quot;https://www.g2studio.com.pe/wp-content/uploads/2018/08/oo.png&quot;); width: 205px;"
-                                data-slick-index="2" aria-hidden="false" tabindex="0">
-                                <!-- <div class="b2-item-img" style="background-image:url(https://www.g2studio.com.pe/wp-content/uploads/2018/08/oo.png); "></div>		 -->
-                                <h4 class="b2-item-info">DISEÑO E IMPLEMENTACIÓN DE TIENDAS RETAIL Y ESPACIOS COMERCIALES</h4>
-                                <span class="g0-link">Ver Servicios</span>
-                            </a>
-                            <a href="https://www.g2studio.com.pe/servicio/diseno-y-construccion-de-plantas-industriales-y-almacenes/" class="b2-item slick-slide slick-active" style="background-image: url(&quot;https://www.g2studio.com.pe/wp-content/uploads/2018/08/mm.png&quot;); width: 205px;"
-                                data-slick-index="3" aria-hidden="false" tabindex="0">
-                                <!-- <div class="b2-item-img" style="background-image:url(https://www.g2studio.com.pe/wp-content/uploads/2018/08/mm.png); "></div>		 -->
-                                <h4 class="b2-item-info">DISEÑO Y CONSTRUCCIÓN DE PLANTAS INDUSTRIALES Y ALMACENES</h4>
-                                <span class="g0-link">Ver Servicios</span>
-                            </a>
+
+                    <div class="framebox">
+                        <div class="owl-carousel">
+                            <a class="item item1">1</a>
+                            <a class="item item2">2</a>
+                            <a class="item item3">3</a>
+                            <a class="item item4">4</a>
                         </div>
                     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -142,38 +107,176 @@
     </div>
 
 
+
+
+    <section>
+        <div class="container">
+            <div class="row headline">
+                <div class="col-xs-12 col-lg-12">
+                    <h2>The best design<br> for your studio website</h2>
+                </div>
+            </div>
+        </div>
+        <div class="slider_report">
+            <section class="variable slider">
+                <div>
+                    <div class="item1 slider_card">
+
+                        <div class="body_card">
+                            <div class="slider_text">
+                                <h2>Name</h2>
+                                <p class="top8">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing Ac aliquam ac volutpat, viverra magna risus aliquam massa. Ac aliquam ac volutpat, viverra magna risus.
+                                </p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div>
+                    <div class="item2 slider_card">
+
+                        <div class="body_card">
+                            <div class="slider_text">
+                                <h2>Name</h2>
+                                <p class="top8">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing Ac aliquam ac volutpat, viverra magna risus aliquam massa. Ac aliquam ac volutpat, viverra magna risus.
+                                </p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div>
+                    <div class="item3 slider_card">
+
+                        <div class="body_card">
+                            <div class="slider_text">
+                                <h2>Name</h2>
+                                <p class="top8">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing Ac aliquam ac volutpat, viverra magna risus aliquam massa. Ac aliquam ac volutpat, viverra magna risus.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="item4 slider_card">
+
+                        <div class="body_card">
+                            <div class="slider_text">
+                                <h2>Name</h2>
+                                <p class="top8">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing Ac aliquam ac volutpat, viverra magna risus aliquam massa. Ac aliquam ac volutpat, viverra magna risus.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <div class="container arrow">
+            <div class="row">
+                <div class="col-xs-12 col-lg-12">
+                    <ul>
+                        <li class="prev">
+                            <button class="slick-prev slick-arrow" aria-label="Previous" type="button"><svg width="51" height="52" viewBox="0 0 51 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <g opacity="0.6">
+                        <path d="M39.5251 23.8557V27.3974H18.2751L28.0147 37.137L25.5001 39.6516L11.4751 25.6266L25.5001 11.6016L28.0147 14.1161L18.2751 23.8557H39.5251Z" fill="#11131E" />
+                      </g>
+                    </svg>
+                  </button>
+                        </li>
+                        <li class="next">
+                            <button class="slick-next slick-arrow" aria-label="Next" type="button"><svg width="51" height="52" viewBox="0 0 51 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <g opacity="0.6">
+                        <path d="M11.4751 23.8557V27.3974H32.7251L22.9855 37.137L25.5001 39.6516L39.5251 25.6266L25.5001 11.6016L22.9855 14.1161L32.7251 23.8557H11.4751Z" fill="#11131E" />
+                      </g>
+                    </svg>
+                  </button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="section">
         <div class="container tim-container">
             <div id="images">
                 <div class="container">
-                    <div class="tim-title">
+                    <div class="tim-title" style="text-align: center;">
                         <h3>NUESTROS CLIENTES POTENCIALES</h3>
                     </div>
                     <div class="row">
-                        <div class="col-xs-6  col-sm-3 col-md-2 offset-md-1">
 
-                            <img src="assets/img/uriel-soberanes.png" class="img-thumbnail img-responsive" alt="Rounded Image">
+                        <div class="card-slider">
+                            <div class="card">
+                                <a href="#" target="_blank" class="main-link">
+                                    <div class="image">
+                                        <img style="height: auto !important;" src="assets/img/uriel-soberanes.png" alt="escribe el nombre">
+                                    </div>
+                                </a>
+                            </div>
 
+                            <div class="card">
+                                <a href="#" target="_blank" class="main-link">
+                                    <div class="image">
+                                        <img style="height: auto !important;" src="assets/img/faces/joe-gardner-2.png" alt="escribe el nombre">
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="card">
+                                <a href="#" target="_blank" class="main-link">
+                                    <div class="image">
+                                        <img style="height: auto !important;" src="assets/img/faces/clem-onojeghuo-3.png" alt="escribe el nombre">
+                                    </div>
+                                </a>
+
+                            </div>
+
+                            <div class="card">
+                                <a href="#" target="_blank" class="main-link">
+                                    <div class="image">
+                                        <img style="height: auto !important;" src="assets/img/faces/ESTREMADOYRO.png" alt="escribe el nombre">
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="card">
+                                <a href="#" target="_blank" class="main-link">
+                                    <div class="image">
+                                        <img style="height: auto !important;" src="assets/img/uriel-soberanes.png" alt="escribe el nombre">
+                                    </div>
+                                </a>
+                            </div>
                         </div>
-                        <div class="col-xs-6  col-sm-3 col-md-2 offset-md-1">
 
-                            <img src="assets/img/faces/joe-gardner-2.png" class="img-thumbnail img-responsive" alt="Rounded Image">
-
-                        </div>
-                        <div class="col-xs-6  col-sm-3 col-md-2 offset-md-1">
-
-                            <img src="assets/img/faces/clem-onojeghuo-3.png" class="img-thumbnail img-responsive" alt="Rounded Image">
-
-                        </div>
-                        <div class="col-xs-6  col-sm-3 col-md-2 offset-md-1">
-
-                            <img src="assets/img/faces/ESTREMADOYRO.png" class="img-thumbnail img-responsive" alt="Rounded Image">
-
-
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
+
+
+
+
+
+
 </div>
